--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,2 +1,7 @@
+$breakpoint-desktop: 80rem;
+
 $Primaryblue: #0099cc;
+$Secondaryblue: #a9d9e8;
 $ButtonColor: #ffff66;
+$alabaster: #fafafa;
+$mercury: #e1e1e1;
