--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,43 +5,79 @@
 
 .header{
     width: 100%;
+    height: 25vw;
+    max-height: 100px;
     padding:0 1rem;
+    background-color: $Primaryblue;
+
+    @include tablet{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background-color: $Primaryblue;
+    height: 5rem;
+    }
+
+    &__title{
+        position: relative;
+        bottom: 40%;
+        left: 30%;
+        width: fit-content;
+
+        @include tablet{
+            display: flex;
+            width: 8rem;
+            bottom: 0;
+            left: 0;
+        }
+
+        @include desktop{
+            width: 18vw;
+            font-size: 2vw;
+            padding: 1rem 0;
+        }
+    }
 
 
     &__dropdown{
-        margin: auto 0;
+        margin: .25rem 0;
         font-size: 3vw;
         height: 10vw;
+        max-height: 35px;
         width: 35vw;
-        max-height: 3rem;
         background-color: $ButtonColor;
         border-radius: 0.25rem;
         font-weight: 600;
+        position: relative;
+        bottom: 40%;
 
         @include tablet{
             width: 13rem;
             font-size: 1rem;
+            bottom: 0;
+            margin: 1rem;
         }
     }
 
     &__button{
         height: 10vw;
-        max-height: 3rem;
+        max-height: 35px;
         width: 35vw;
-        font-size: 3vw;
-        margin: auto 0;
+        font-size: 2.5vw;
+        margin: .25rem 0;
         border-radius: 0.25rem;
         border: none;
         background-color: $ButtonColor;
         font-weight: 600;
+        position: relative;
+        bottom: 40%;
+        left: 25%;
 
         @include tablet{
             width: 13rem;
             font-size: 1rem;
+            bottom: 0;
+            left: 0;
+            margin: 1rem;
         }
 
     }
@@ -49,6 +85,7 @@
 
     &__logo{
         width: 18vw;
+        max-height: 50px;
         border-radius: 0.25rem;
         margin-top: .25rem;
 
@@ -58,6 +95,7 @@
 
         @include desktop{
             width: 8rem;
+            margin-left: 3rem;
         }
     }
 }
