--- a/src/components/CardList/CardList.scss
+++ b/src/components/CardList/CardList.scss
@@ -25,13 +25,13 @@
     width: 50%;
 
     @include tablet {
-      width: 40%;
-      display: flex;
-    }
+      display: grid;
+      grid-template-columns: 25% 25% 25% 25%;
+      width: 100%;
+      }
 
     @include desktop {
-      height: 18rem;
-      margin: 1rem;
+      height: 30vw;
     }
   }
 
