--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -11,6 +11,10 @@
     justify-content: space-between;
     background-color: $Primaryblue;
     align-items: center;
+    
+    &__title{
+        font-size: 3.5vw;
+    }
 
     &__button{
         height: 10vw;
