--- a/src/components/RecommendedMovie/RecommendedMovie.scss
+++ b/src/components/RecommendedMovie/RecommendedMovie.scss
@@ -12,6 +12,7 @@
     position: relative;
     top: 11rem;
     left: 1rem;
+    width: 60%;
   }
 
   @include desktop {
@@ -24,6 +25,7 @@
 
     @include tablet {
       font-size: 2rem;
+      width: fit-content;
     }
   }
 
@@ -33,6 +35,7 @@
 
     @include tablet {
       font-size: 2rem;
+      width: fit-content;
     }
   }
 }
